# vision-skill

./: ALWAYS_ON.md  CHANGELOG.md  README.md  SKILL.md  add-eyes.md.bak  add_eyes.py  mcp_server.py  mimo_vision.py  pyproject.toml
.cursor/rules/: mimo-vision.md
.github/: copilot-instructions.md
